@@ -1,145 +1,46 @@
 <SECTION>
 <FILE>rsvg</FILE>
 <TITLE>Core API</TITLE>
+RsvgError
 rsvg_error_quark
-RsvgSizeFunc
+rsvg_init
+rsvg_term
 rsvg_set_default_dpi
+rsvg_set_default_dpi_x_y
 rsvg_handle_new
+rsvg_handle_free
 rsvg_handle_set_dpi
-rsvg_handle_set_size_callback
+rsvg_handle_set_dpi_x_y
 rsvg_handle_write
 rsvg_handle_close
+RsvgSizeFunc
+rsvg_handle_set_size_callback
 rsvg_handle_get_pixbuf
+rsvg_handle_get_pixbuf_sub
+rsvg_handle_get_base_uri
+rsvg_handle_set_base_uri
 rsvg_handle_get_title
 rsvg_handle_get_desc
-rsvg_handle_free
-<SUBSECTION Private>
-RsvgMaskUnits
-rsvg_art_get_image_of_node
-rsvg_new_marker
-RsvgNodeGroup
-rsvg_handle_new_from_data
-rsvg_art_push_discrete_layer
-rsvg_new_filter_primitive_light_source
-RsvgClipPath
-rsvg_node_draw
-rsvg_new_defs
-rsvg_node_group_pack
-rsvg_new_symbol
-rsvg_filter_render
-RsvgNodeUse
-rsvg_art_svp_render_path
-RsvgFilter
-rsvg_new_switch
-rsvg_pixbuf_new_from_href
-rsvg_render_markers
-rsvg_handle_get_metadata
-rsvg_handle_set_base_uri
-rsvg_handle_get_base_uri
-rsvg_new_filter_primitive_specular_lighting
-rsvg_term
-rsvg_pop_def_group
-rsvg_art_render_path
-rsvg_new_filter_primitive_blend
-rsvg_art_needs_discrete_layer
-rsvg_mask_parse
-rsvg_new_node_component_transfer_function
-rsvg_new_filter_primitive_colour_matrix
-rsvg_new_filter_primitive_offset
-rsvg_new_filter
-rsvg_new_filter_primitive_merge_node
-rsvg_new_filter_primitive_convolve_matrix
-RsvgMask
-rsvg_art_render_new
 rsvg_handle_get_dimensions
-RsvgArtRender
-rsvg_marker_render
-rsvg_new_group
-rsvg_art_render_paint_server
-rsvg_new_filter_primitive_flood
-rsvg_init
-rsvg_art_clip_path_merge
-rsvg_new_mask
-rsvg_art_add_clipping_rect
-RSVG_TYPE_ERROR
-rsvg_error_get_type
-rsvg_art_affine_image
-rsvg_new_filter_primitive_gaussian_blur
-rsvg_new_use
-RsvgDimensionData
-RsvgFilterUnits
-rsvg_marker_parse
-rsvg_new_filter_primitive_image
-rsvg_filter_parse
-rsvg_new_filter_primitive_diffuse_lighting
-rsvg_new_filter_primitive_component_transfer
-RsvgNodeSymbol
-RsvgNodeImage
-rsvg_art_render_image
-rsvg_new_image
-rsvg_new_filter_primitive_tile
-rsvg_art_clip_path_render
-rsvg_filter_adobe_blend
-rsvg_new_filter_primitive_erode
-RsvgArtSVPRender
-rsvg_art_rect_clip_path
-rsvg_handle_new_from_file
-rsvg_new_filter_primitive_merge
-rsvg_art_mask_render
-rsvg_new_svg
-rsvg_new_clip_path
-RsvgError
-rsvg_new_filter_primitive_displacement_map
-rsvg_art_pop_discrete_layer
-RSVG_ERROR
-rsvg_new_filter_primitive_composite
-rsvg_new_filter_primitive_turbulence
-RsvgNodeSvg
-RsvgHandle
-RsvgMarker
-rsvg_get_file_path
-rsvg_clip_path_parse
-rsvg_art_svp_render_new
-rsvg_preserve_aspect_ratio
-rsvg_art_clip_image
-rsvg_alpha_blt
 </SECTION>
 
 <SECTION>
 <FILE>rsvg-cairo</FILE>
 <TITLE>Rendering SVG files with cairo</TITLE>
 rsvg_cairo_render
-<SUBSECTION Private>
-rsvg_cairo_render_rsvg_handle
-rsvg_cairo_get_image_of_node
-rsvg_cairo_render_image
-rsvg_cairo_add_clipping_rect
-RsvgCairoRender
-rsvg_cairo_pop_discrete_layer
-rsvg_cairo_render_path
-rsvg_cairo_push_discrete_layer
-rsvg_cairo_render_new
-</SECTION>
-
-<SECTION>
-<FILE>rsvg-gz</FILE>
-<TITLE>Creating a SVGZ reader</TITLE>
-rsvg_handle_new_gz
+rsvg_cairo_render_sub
 </SECTION>
 
 <SECTION>
 <FILE>rsvg-file-util</FILE>
 <TITLE>Convenience Functions</TITLE>
+rsvg_handle_new_from_data
+rsvg_handle_new_from_file
 rsvg_pixbuf_from_file
 rsvg_pixbuf_from_file_at_zoom
 rsvg_pixbuf_from_file_at_size
 rsvg_pixbuf_from_file_at_max_size
 rsvg_pixbuf_from_file_at_zoom_with_max
-rsvg_pixbuf_from_file_ex
-rsvg_pixbuf_from_file_at_zoom_ex
-rsvg_pixbuf_from_file_at_size_ex
-rsvg_pixbuf_from_file_at_max_size_ex
-rsvg_pixbuf_from_file_at_zoom_with_max_ex
 </SECTION>
 
 
