@@ -1,16 +1,0 @@
-<!-- ##### SECTION Title ##### -->
-Creating a SVGZ reader
-
-<!-- ##### SECTION Short_Description ##### -->
-
-
-<!-- ##### SECTION Long_Description ##### -->
-<para>
-
-</para>
-
-<!-- ##### SECTION See_Also ##### -->
-<para>
-
-</para>
-
